@@ -20,6 +20,10 @@ urlpatterns = [
             payment_information.PaymentInformationCreation.as_view(),
             name='billing__create_payment_info',
         ),
+        url(r'^add_related/(?P<entity_id>\d+)[/]?$',
+            payment_information.PaymentInformationRelatedCreation.as_view(),
+            name='billing__create_related_payment_info',
+        ),
         # url(r'^edit/(?P<payment_information_id>\d+)[/]?$', payment_information.edit, name='billing__edit_payment_info'),
         url(r'^edit/(?P<pinfo_id>\d+)[/]?$',
             payment_information.PaymentInformationEdition.as_view(),
